--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@google-cloud/opentelemetry-cloud-trace-exporter": "^0.3.0",
     "@opentelemetry/api": "^0.8.0",
     "@opentelemetry/core": "^0.8.0",
+    "@opentelemetry/exporter-prometheus": "^0.8.0",
     "@opentelemetry/exporter-zipkin": "^0.8.0",
+    "@opentelemetry/metrics": "^0.8.0",
     "@opentelemetry/node": "^0.8.0",
     "@opentelemetry/plugin-express": "^0.7.0",
     "@opentelemetry/plugin-http": "^0.8.0",
