--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,15 @@
   "dependencies": {
     "esm": "^3.2.25",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap":"^8.4.1"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+
   },
   "browserslist": {
     "production": [
