--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "@opentelemetry/exporter-collector": "^0.8.1",
+    "@opentelemetry/plugin-document-load": "^0.7.0",
+    "@opentelemetry/tracing": "^0.8.1",
+    "@opentelemetry/web": "^0.8.1",
     "esm": "^3.2.25",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
