--- a/client/package.json
+++ b/client/package.json
@@ -6,17 +6,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "esm": "^3.2.25",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "reactstrap":"^8.4.1"
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "prestart": "npm install -g serve",
+    "postinstall": "npm run build",
+    "start": "serve -l 8080 -s build",
     "build": "react-scripts build"
-
   },
   "browserslist": {
     "production": [
