--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "install": "^0.13.0",
-    "npm": "^6.14.5"
+    "npm": "^6.14.5",
+    "cors": "^2.8.5"
   }
 }
