--- a/client/k8s-notworkingtest/service.yaml
+++ b/client/k8s-notworkingtest/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web-instrumentation
+  name: starter-project-kube
 spec:
   type: NodePort
   selector:
-    app: web-instrumentation
+    app: starter-project-kube
   ports:
   - protocol: TCP
     port: 80
