--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/opentelemetry-cloud-trace-exporter": "^0.3.0",
+    "@opentelemetry/api": "^0.8.3",
+    "@opentelemetry/context-async-hooks": "^0.8.3",
+    "@opentelemetry/core": "^0.8.3",
     "@opentelemetry/exporter-collector": "^0.4.0",
+    "@opentelemetry/node": "^0.8.3",
     "@opentelemetry/plugin-document-load": "^0.4.0",
     "@opentelemetry/plugin-xml-http-request": "^0.4.0",
     "@opentelemetry/scope-zone": "^0.4.0",
     "@opentelemetry/tracing": "^0.4.0",
     "@opentelemetry/web": "^0.4.0",
+    "async_hooks": "^1.0.0",
     "esm": "^3.2.25",
+    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
